--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href= " {{ url_for('about') }} " >About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="post.html">Events</a>
