--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,12 +42,13 @@
               <a class="nav-link" href= " {{ url_for('about') }} " >About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="post.html">Events</a>
-            <li class="nav-item">
-              <a class="nav-link" href="post.html">Topics</a>
+              <a class="nav-link" href=" {{ url_for('post') }} ">Events</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+              <a class="nav-link" href=" {{ url_for('post') }} ">Topics</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href=" {{ url_for('contact') }} ">Contact</a>
             </li>
           </ul>
         </div>
