--- a/templates/post.html
+++ b/templates/post.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/post-bg.jpg')">
+    <header class="masthead" style="background-image: url('static/img/post-bg.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
