--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href=" {{ url_for('index') }}">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href= " {{ url_for('about') }} " >About</a>
