--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,6 +39,9 @@
               <a class="nav-link" href=" {{ url_for('index') }}">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href=" {{ url_for('login') }}">Login</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href= " {{ url_for('about') }} " >About</a>
             </li>
             <li class="nav-item">
